tests/miniJava/neg/003883_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { int System.out.println ( { } ) ; } }
